--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Profile Photo Section -->
   <div class="profile-photo" id="profile">
-    <img src="C:\Users\Sohan Hg\OneDrive\Desktop\shivu.jpg" alt="Shivakumar">
+    <img src="last2/shivu.jpg" alt="Shivakumar">
     <h1>Shivakumar</h1>
     <p>Software Engineer | Problem Solver | Innovator</p>
   </div>
